resources/GOTL.gram
lang -> VALAR_MORGHULIS expr+ VALAR_DOHAERIS
expr -> assign_expr|cond_expr|while_expr|input_expr|output_expr
assign_expr -> DAENERIS VAR ASSIGN_OP value_expr SEMICOLON
value_expr -> value|arithm_expr
value -> TYPE|VAR|DIGIT|CONST_STRING
arithm_expr -> TYRION value (op value)+
op -> PLUS_MINUS | MULT_DIV
cond_expr -> CERSEI cond_head body
cond_head -> IF_KW logical_head
logical_head -> OPEN_PARANTH logical_expr CLOSE_PARANTH
logical_expr -> value LOGIC_OP value
body -> OPEN_BRACKET expr+ CLOSE_BRACKET
while_expr -> ARYA while_head body
while_head -> WHILE_KW logical_head
input_expr -> YGRITTE (INPUT_OUTPUT_OP VAR)+ SEMICOLON
output_expr -> JON (INPUT_OUTPUT_OP output_value)+ SEMICOLON
output_value -> value|CONST_STRING

VALAR_MORGHULIS -> Valar Morghulis
VALAR_DOHAERIS -> Valar Dohaeris
DAENERIS -> Daeneris:
TYRION -> Tyrion:
CERCEI -> Cercei:
ARYA -> Arya:
JON -> Jon:
YGRITTE -> Ygritte:
TYPE -> int|str|list
VAR -> [a-zA-z]+
ASSIGN_OP -> =
DIGIT -> 0|([1-9][0-9]*)
PLUS_MINUS -> +|-
MULT_DIV -> *|/
LOGIC_OP -> >|<|==|>=|<=
CONST_STRING -> ".*"
IF_KW = if
WHILE_KW = while
OPEN_PARANTH -> (
CLOSE_PARANTH -> )
OPEN_BRACKET -> {
CLOSE_BRACKET -> }
INPUT_OUTPUT_OP -> --
SEMICOLON -> ;
